; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_openssl.c_bio_bufferevent_free.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_openssl.c_bio_bufferevent_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @bio_bufferevent_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bio_bufferevent_free(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %27

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @BIO_get_shutdown(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %26

11:                                               ; preds = %7
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @BIO_get_init(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i64 @BIO_get_data(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32*, i32** %3, align 8
  %21 = call i64 @BIO_get_data(i32* %20)
  %22 = call i32 @bufferevent_free(i64 %21)
  br label %23

23:                                               ; preds = %19, %15, %11
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @BIO_free(i32* %24)
  br label %26

26:                                               ; preds = %23, %7
  store i32 1, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %6
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @BIO_get_shutdown(i32*) #1

declare dso_local i64 @BIO_get_init(i32*) #1

declare dso_local i64 @BIO_get_data(i32*) #1

declare dso_local i32 @bufferevent_free(i64) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
